[gd_scene load_steps=8 format=3 uid="uid://d3mdh3h6hhpcq"]

[ext_resource type="Script" path="res://stage_two.gd" id="1_pfix5"]
[ext_resource type="PackedScene" uid="uid://cwe2p5eoodw7y" path="res://hud.tscn" id="2_8je7a"]
[ext_resource type="PackedScene" uid="uid://dbl7gfv4uspt1" path="res://grass.tscn" id="3_64nvg"]
[ext_resource type="PackedScene" uid="uid://dq4v80es8nawg" path="res://background_2.tscn" id="4_yabww"]
[ext_resource type="PackedScene" uid="uid://bbw7xg302jxl1" path="res://player.tscn" id="5_ocq56"]
[ext_resource type="AudioStream" uid="uid://c60lkbb7tpiv7" path="res://audio/unpleasant_hunch.ogg" id="6_hut6w"]

[sub_resource type="Curve2D" id="Curve2D_6jx84"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 8, 8, 0, 0, 0, 0, 1144, 0, 0, 0, 0, 0, 1144, 640, 0, 0, 0, 0, 8, 640, 0, 0, 0, 0, 8, 8)
}
point_count = 5

[node name="StageTwo" type="Node2D"]
script = ExtResource("1_pfix5")

[node name="Hud" parent="." instance=ExtResource("2_8je7a")]

[node name="GrassBackground" parent="." instance=ExtResource("3_64nvg")]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GrassBackground"]

[node name="SecondBackground" parent="." instance=ExtResource("4_yabww")]
visible = false

[node name="NPC_Path" type="Path2D" parent="."]
curve = SubResource("Curve2D_6jx84")

[node name="GhostSpawnLocation" type="PathFollow2D" parent="NPC_Path"]
position = Vector2(8, 8)
rotation = -0.00704214

[node name="PlayerSpawnPoint" type="Marker2D" parent="."]
position = Vector2(500, 450)

[node name="Player" parent="." instance=ExtResource("5_ocq56")]
position = Vector2(500, 448)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_hut6w")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(0, 0, 1144, 0, 1144, 640, 8, 640, -8, 0, -16, 0, 0, 648, 1152, 648, 1152, -8, 0, -8)

[connection signal="play_again" from="Hud" to="." method="_on_play_again"]
[connection signal="game_over" from="Player" to="." method="_on_game_over"]
